--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2024"
 
 [dependencies]
 num-traits = "0.2.19"
-rust_decimal = "1.37.2"
+rust_decimal = { version = "1.37.2", features = ["serde", "maths"] }
 thiserror = "2.0.12"
+once_cell = "1.21.3"
