--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ num-traits = "0.2.19"
 rust_decimal = { version = "1.37.2", features = ["serde", "maths"] }
 thiserror = "2.0.12"
 once_cell = "1.21.3"
+chrono = "0.4.41"
+serde = { version = "1.0.219", features = ["derive"] }
