--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,5 @@ rust_decimal = { version = "1.37.2", features = ["serde", "maths"] }
 thiserror = "2.0.12"
 once_cell = "1.21.3"
 serde = { version = "1.0.219", features = ["derive"] }
-time = "=0.3.41"
-
+time = "0.3.41"
+time-macros = "0.2.22"
