--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ once_cell = "1.21.3"
 serde = { version = "1.0.219", features = ["derive"] }
 time = "0.3.41"
 time-macros = "0.2.22"
+log = "0.4.27"
