features with-plotters

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,13 @@ time = "0.3.41"
 time-macros = "0.2.22"
 log = "0.4.27"
 
+plotters = { version = "0.3.7", optional = true }
+plotters-svg = { version = "0.3.7", optional = true }
+
+[features]
+default = []
+with-plotters = ["plotters", "plotters-svg"]
+
 [dev-dependencies]
 plotters = "0.3.7"         # 只用于测试和示例
-#plotters-svg = "0.3.7"     # 生成 SVG 格式
+plotters-svg = "0.3.7"     # 生成 SVG 格式
