--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,25 +1,7 @@
-[package]
-name = "ta4r"
-version = "0.1.0"
-edition = "2024"
-
-[dependencies]
-num-traits = "0.2.19"
-rust_decimal = { version = "1.37.2", features = ["serde", "maths"] }
-thiserror = "2.0.12"
-once_cell = "1.21.3"
-serde = { version = "1.0.219", features = ["derive"] }
-time = "0.3.41"
-time-macros = "0.2.22"
-log = "0.4.27"
-
-plotters = { version = "0.3.7", optional = true }
-plotters-svg = { version = "0.3.7", optional = true }
-
-[features]
-default = []
-with-plotters = ["plotters", "plotters-svg"]
-
-[dev-dependencies]
-plotters = "0.3.7"         # 只用于测试和示例
-plotters-svg = "0.3.7"     # 生成 SVG 格式
+[workspace]
+members = [
+    "ta4r",
+    "tests_indicator",
+    "tests_strategy"
+]
+resolver = "3"
