--- a/ta4r/Cargo.toml
+++ b/ta4r/Cargo.toml
@@ -12,3 +12,7 @@ serde = { version = "1.0.219", features = ["derive"] }
 time = "0.3.41"
 time-macros = "0.2.22"
 log = "0.4.27"
+
+[features]
+default = []
+enable-mocks = []
