--- a/ta4r/Cargo.toml
+++ b/ta4r/Cargo.toml
@@ -12,6 +12,7 @@ serde = { version = "1.0.219", features = ["derive"] }
 time = "0.3.41"
 time-macros = "0.2.22"
 log = "0.4.27"
+parking_lot = "0.12.4"
 
 [features]
 default = []
