--- a/ta4r-examples/Cargo.toml
+++ b/ta4r-examples/Cargo.toml
@@ -11,3 +11,6 @@ csv = "1.3.1"
 log = "0.4.27"
 ta4r = { path = "../ta4r" }
 thiserror = "2.0.12"
+rand = "0.8.5"
+num-traits = "0.2.19"
+parking_lot = "0.12.4"
